dark-mode addedd

--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
     <link rel="preload" href="/css/glide.css" as="style">
     <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="/css/dark-mode.css">
     <script type="module" src="/js/glide.min.js" defer></script>
     <script type="module" src="/js/script.js" defer></script>
     <noscript>
@@ -113,7 +115,7 @@
         </svg>
       </section>
 
-      <section id="pg1-s1-cards">
+      <section class="pg1-s1-cards">
         <div class="wrapper wrapper--mobile-S">
 
           <svg class="decorative-side-svg" viewBox="0 0 512 512" aria-hidden="true">
@@ -230,7 +232,7 @@
         </div>
       </section>
 
-      <section id="pg1-s2-approach">
+      <section class="pg1-s2-approach">
         <div class="wrapper wrapper--mobile-L">
 
           <div class="pg1-s2-approach__flex">
@@ -322,7 +324,7 @@
         </div>
       </section>
 
-      <section id="pg1-s3-performance">
+      <section class="pg1-s3-performance">
         <div class="wrapper wrapper--mobile-S performance-text-block__flex-container">
 
           <div class="performance-text-block__text-block">
@@ -370,7 +372,7 @@
         </div>
       </section>
 
-      <section id="pg1-s4-portfolio">
+      <section class="pg1-s4-portfolio">
         <div class="wrapper wrapper--mobile-L">
 
           <span class="cmp-topper-heading">Our Portfolio</span>
@@ -389,7 +391,7 @@
         </div>
       </section>
 
-      <section id="pg1-s5-pricing">
+      <section class="pg1-s5-pricing">
         <div class="wrapper wrapper--mobile-L">
           <span class="cmp-topper-heading cmp-topper-heading--pg1-s5">Our Pricing</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5">Affordable Packages for Any Business</h2>
@@ -544,7 +546,7 @@
         </div>
       </section>
 
-      <section id="pg1-s6-testimonials">
+      <section class="pg1-s6-testimonials">
         <div class="wrapper">
           <span class="cmp-topper-heading">Our Testimonials</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6">Serving Small Businesses Across the Continent</h2>
