--- a/html/services.html
+++ b/html/services.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="/css/critical.css">
     <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/glide.css" as="style">
-    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
-    <script type="module" src="/js/glide.min.js" defer></script>
+    <link rel="preload" href="/css/style-pages.css" as="style">
+    <link rel="stylesheet" href="/css/style-pages.css">
+    <link rel="preload" href="/css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="/css/dark-mode.css">
     <script type="module" src="/js/script.js" defer></script>
     <noscript>
       <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -89,7 +89,15 @@
     </header>
 
     <main id="main">
-      <section id="pg1-s2-approach">
+
+      <div class="cmp-svg-pages-decoration">
+        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Our Services</h1>
+        <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
+          <path d="M0,80 C360,160 1080,0 1440,80 L1440,0 L0,0 Z" />
+        </svg>
+      </div>
+
+      <section class="pg1-s2-approach">
         <div class="wrapper wrapper--mobile-L">
 
           <div class="pg1-s2-approach__flex">
@@ -181,7 +189,7 @@
         </div>
       </section>
 
-      <section id="pg1-s1-cards">
+      <section class="pg1-s1-cards">
         <div class="wrapper wrapper--mobile-S">
 
           <svg class="decorative-side-svg" viewBox="0 0 512 512" aria-hidden="true">
