--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
+    <script>
+      (function () {
+        let theme = localStorage.getItem("theme");
+        if (!theme && window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
+          theme = "dark";
+        }
+        if (theme === "dark") {
+          document.documentElement.classList.add("dark-mode");
+        }
+      })();
+    </script>
     <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
@@ -80,11 +91,11 @@
 
           <nav class="nav-bar">
             <ul>
-              <li><a href="index.html">Home</a></li>    
+              <li><a href="index.html">Home</a></li>
               <li><a href="html/about.html">About Us</a></li>
               <li><a href="html/services.html">Services</a></li>
               <li><a href="html/pricing.html">Pricing</a></li>
-              <li><a href="html/contact.html">Contact</a></li> 
+              <li><a href="html/contact.html">Contact</a></li>
             </ul>
           </nav>
 
@@ -113,7 +124,7 @@
         </div>
 
         <svg class="hero__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
-          <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z"/>
+          <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" />
         </svg>
       </section>
 
@@ -121,9 +132,12 @@
         <div class="wrapper wrapper--mobile-S">
 
           <svg class="decorative-side-svg" viewBox="0 0 512 512" aria-hidden="true">
-            <path d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-            <path d="M256,477.323c-5.633,0-10.199-4.566-10.199-10.199c0-5.633,4.566-10.199,10.199-10.199 c38.724,0,76.315-11.037,108.706-31.915c4.736-3.052,11.047-1.687,14.098,3.047c3.052,4.734,1.688,11.047-3.046,14.098 C340.064,465.161,298.652,477.323,256,477.323z"></path>
-            <path d="M399.811,420.771c-2.733,0-5.459-1.091-7.468-3.249c-3.838-4.122-3.607-10.577,0.515-14.415 c2.223-2.069,4.421-4.21,6.535-6.363c3.947-4.02,10.404-4.079,14.424-0.134c4.02,3.946,4.08,10.403,0.134,14.424 c-2.326,2.37-4.747,4.726-7.192,7.004C404.794,419.867,402.299,420.771,399.811,420.771z"></path>
+            <defs>
+              <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
+                <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
+              </filter>
+            </defs>
+            <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
           </svg>
 
           <div class="cards-main-text-container">
@@ -554,10 +568,13 @@
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
-          <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 512 512" aria-hidden="true">
-            <path style="fill:#001f3f;" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-            <path style="fill:#001f3f;" d="M256,477.323c-5.633,0-10.199-4.566-10.199-10.199c0-5.633,4.566-10.199,10.199-10.199 c38.724,0,76.315-11.037,108.706-31.915c4.736-3.052,11.047-1.687,14.098,3.047c3.052,4.734,1.688,11.047-3.046,14.098 C340.064,465.161,298.652,477.323,256,477.323z"></path>
-            <path style="fill:#001f3f;" d="M399.811,420.771c-2.733,0-5.459-1.091-7.468-3.249c-3.838-4.122-3.607-10.577,0.515-14.415 c2.223-2.069,4.421-4.21,6.535-6.363c3.947-4.02,10.404-4.079,14.424-0.134c4.02,3.946,4.08,10.403,0.134,14.424 c-2.326,2.37-4.747,4.726-7.192,7.004C404.794,419.867,402.299,420.771,399.811,420.771z"></path>
+          <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 530 512" aria-hidden="true">
+            <defs>
+              <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
+                <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
+              </filter>
+            </defs>
+            <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
           </svg>
 
           <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
