fixing file paths

--- a/html/about.html
+++ b/html/about.html
@@ -15,26 +15,26 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/css/style-pages.css">
-    <link rel="preload" href="/css/glide.css" as="style">
-    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/glide.min.js" defer></script>
-    <script type="module" src="/js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="stylesheet" href="css/critical.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/style-pages.css" as="style">
+    <link rel="stylesheet" href="css/style-pages.css">
+    <link rel="preload" href="css/glide.css" as="style">
+    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <script type="module" src="js/glide.min.js" defer></script>
+    <script type="module" src="js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/glide.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -114,6 +114,27 @@
         </svg>
       </div>
 
+      <section class="pg2-s1-who">
+        <div class="wrapper wrapper--mobile-L">
+
+          <div class="who-text-image-flex">
+            <div class="who-text-block">
+              <span class="cmp-topper-heading">Algarve Webcraft</span>
+              <h2 class="cmp-sub-heading">A small website business from a small coastal town</h2>
+              <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
+              <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
+              <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
+            </div> 
+            <div class="who-image-block">
+              <img src="#" alt="A picture of the cliff landscape of the Algarve.">
+              <img src="#" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.">
+              <a class="cmp-main-btn cmp-main-btn--light" href="#">Contact Us</a> 
+            </div>
+          </div>
+
+        </div>
+      </section>
+
       <section class="pg1-s4-portfolio pg1-s4-portfolio--pg2-s1">
         <div class="wrapper wrapper--mobile-L">
 
@@ -133,9 +154,9 @@
         </div>
       </section>
 
-      <section class="pg1-s6-testimonials">
+      <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3">
         <div class="wrapper">
-          <span class="cmp-topper-heading cmp-topper-heading--pg2-s2">Our Testimonials</span>
+          <span class="cmp-topper-heading cmp-topper-heading--pg2-s3">Our Testimonials</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
@@ -209,6 +230,10 @@
           </div>
 
           <div class="footer-bottom-links-container">
+            <svg class="created-by-svg" viewBox="0 0 260 24" aria-label="Created by Algarve WebCraft">
+              <text x="16" y="18" font-family="Arial, sans-serif" font-size="16" fill="white" font-style="italic">Developed by Algarve WebCraft</text>
+            </svg>
+
             <div>
               <span id="year"></span>
               <span><strong>Algarve WebCraft</strong></span>
