--- a/html/pricing.html
+++ b/html/pricing.html
@@ -15,22 +15,22 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/css/style-pages.css">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="stylesheet" href="css/critical.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/style-pages.css" as="style">
+    <link rel="stylesheet" href="css/style-pages.css">
+    <link rel="preload" href="css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <script type="module" src="js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="css/style.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -110,12 +110,12 @@
         </svg>
       </div>
 
-      <section class="pg1-s5-pricing">
+      <section class="pg1-s5-pricing pg1-s5-pricing--pg4-s1">
         <div class="wrapper wrapper--mobile-L">
-          <span class="cmp-topper-heading cmp-topper-heading--pg1-s5">Our Pricing</span>
+          <span class="cmp-topper-heading cmp-topper-heading--pg1-s5 cmp-topper-heading--pg4-s1">Our Pricing</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5">Affordable Packages for Any Business</h2>
 
-          <div class="pricing-card-container">
+          <div class="pricing-card-container pricing-card-container--pg4-s1">
             <div class="pricing-card">
               <h3>Once off</h3>
 
@@ -184,7 +184,7 @@
                 </li>
               </ul>
 
-              <span>€1100</span>
+              <span>€1200</span>
               <span>+€15/mo Hosting</span>
               <a class="cmp-main-btn" href="#">Get Started</a>
             </div>
@@ -308,6 +308,10 @@
           </div>
 
           <div class="footer-bottom-links-container">
+            <svg class="created-by-svg" viewBox="0 0 260 24" aria-label="Created by Algarve WebCraft">
+              <text x="16" y="18" font-family="Arial, sans-serif" font-size="16" fill="white" font-style="italic">Developed by Algarve WebCraft</text>
+            </svg>
+            
             <div>
               <span id="year"></span>
               <span><strong>Algarve WebCraft</strong></span>
