--- a/html/services.html
+++ b/html/services.html
@@ -15,22 +15,22 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/style-pages.css" as="style">
-    <link rel="stylesheet" href="/css/style-pages.css">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="stylesheet" href="css/critical.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/style-pages.css" as="style">
+    <link rel="stylesheet" href="css/style-pages.css">
+    <link rel="preload" href="css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <script type="module" src="js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="css/style.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -110,16 +110,54 @@
         </svg>
       </div>
 
-      <section class="pg1-s2-approach">
+      <section class="pg3-s1-services">
+        <div class="wrapper wrapper--mobile-L">
+
+          <div class="services-box-flex">
+            <div class="services-box__text">
+              <span class="cmp-topper-heading">Our Services</span>
+              <h2 class="cmp-sub-heading">Built From the ground up</h2>
+              <p class="cmp-main-text">At Algarve WebCraft, every website we create is hand-coded from the ground up. That means no page builders, no WordPress, and no bloated templates. By writing clean, lightweight code ourselves, we are able to design fast, responsive, and truly custom websites that perform better across the board. Whether it’s speed, security, or search engine rankings, our websites are as efficient as can be.</p>
+
+              <h3 class="services-page-sub-heading">Why Custom Code Makes a Difference</h3>
+
+              <ul class="cmp-main-text services-page-list">
+                <li><strong>⚡ Lightning-Fast Load Times</strong><br>
+                  Our websites load almost instantly. No unnecessary plugins or scripts slowing things down—just optimized, minimal code that gives your visitors a smooth, fast experience. And when a site loads quickly, users are more likely to stick around.</li>
+                <li><strong>🔐 Stronger Security</strong><br>
+                  Without platforms like WordPress or third-party plugins, there are far fewer entry points for hackers. Our websites do not rely on databases or backend systems vulnerable to attacks, only static HTML and CSS. That means no risk of your website ever being hacked.</li>
+                <li><strong>📈 Better SEO & Rankings</strong><br>
+                  Google loves fast, well-built websites. When your site scores high on Google’s Core Web Vitals and PageSpeed Insights, it’s more likely to rank higher in search results. A faster, more stable site also means users stay longer and engage more with the site, all key signals Google looks for.</li>
+                <li><strong>💰 Lower Ad Costs, Higher Conversions</strong><br>
+                  A slow website can ruin your advertising efforts. If your landing page takes more than a few seconds to load, potential customers may leave before even seeing your offer. Faster websites lead to better conversion rates and, as a bonus, often reduce your ad cost-per-click, saving you money in the long run.</li>
+                <li><strong>🗺️ Boosts Your Local Presence</strong><br>
+                  Sites built with performance in mind help improve your visibility in local searches, especially your Google Business Profile and Maps listings. This makes it easier for nearby customers to find and trust your business.</li>
+              </ul>
+
+              <h3 class="services-page-sub-heading">A Smarter Investment for Your Business</h3>
+              <p class="cmp-main-text">In todays competitive digital space, you need every advantage to stand out. While others are stuck with slow, bloated and generic websites, you can offer your visitors a custom-built experience that’s fast, secure, and uniquely yours.</p><br>
+              <p class="cmp-main-text">And because we handle everything from design and development to ongoing upkeep and maintenance, you can focus on what matters the most: running your business.</p>
+            </div>
+
+            <div class="services-box__image">
+              <img src="" alt="A random image for the services section">
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+
+      <section class="pg1-s2-approach pg1-s2-approach--pg3-s2">
         <div class="wrapper wrapper--mobile-L">
 
           <div class="pg1-s2-approach__flex">
             <div class="text-block-container">
               <div class="text-block-container__main-text">
-                <span class="cmp-topper-heading">Our approach</span>
-                <h2 class="cmp-sub-heading">Websites Start At €0 Upfront And €85 Per Month</h2>
-                <p class="cmp-main-text cmp-main-text--pg1-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more than the basics? We will give you a fair, custom quote based on your exact needs.</p>
-                <p class="cmp-main-text cmp-main-text--pg1-s2">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
+                <span class="cmp-topper-heading cmp-topper-heading--pg3-s2">Our approach</span>
+                <h2 class="cmp-sub-heading cmp-sub-heading--pg3-s2">Professional Web Design for Just €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2>
+                <p class="cmp-main-text cmp-main-text--pg1-s2 cmp-main-text--pg3-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more than the basics? We will give you a fair, custom quote based on your exact needs.</p>
+                <p class="cmp-main-text cmp-main-text--pg1-s2 cmp-main-text--pg3-s2">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
               </div>
 
               <div class="text-block">
@@ -127,9 +165,9 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Custom Design</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Custom Design</h3>
                 </div>
-                <p>We can create completely custom designed sites, keeping the design as close to your specifications as possible.</p>
+                <p class="text-block-text--pg3-s2">We can create completely custom designed sites, keeping the design as close to your specifications as possible.</p>
               </div>
 
               <div class="text-block">
@@ -137,9 +175,9 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Perfect PageSpeed</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Perfect PageSpeed</h3>
                 </div>
-                <p>We ensure our sites have a perfect <strong>100</strong> speed score with Google, meaning they will run as fast and efficiently as possible.</p>
+                <p class="text-block-text--pg3-s2">We ensure our sites have a perfect <strong>100</strong> speed score with Google, meaning they will run as fast and efficiently as possible.</p>
               </div>
 
               <div class="text-block">
@@ -147,9 +185,9 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Guaranteed Safety</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Guaranteed Safety</h3>
                 </div>
-                <p>The sites we create are with static code, so they cannot ever be hacked. Never fear about your site being compromised.</p>
+                <p class="text-block-text--pg3-s2">The sites we create are with static code, so they cannot ever be hacked. Never fear about your site being compromised.</p>
               </div>
 
               <div class="text-block">
@@ -157,9 +195,9 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Money Back Guarantee</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Money Back Guarantee</h3>
                 </div>
-                <p>If you are not completely happy with the website, we will refund your money. We take pride in our work and will never ask you to settle for anything less.</p>
+                <p class="text-block-text--pg3-s2">If you are not completely happy with the website, we will refund your money. We take pride in our work and will never ask you to settle for anything less.</p>
               </div>
 
               <div class="text-block">
@@ -167,9 +205,9 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Social Media Specialist</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Social Media Specialist</h3>
                 </div>
-                <p>Our in-house social media manager is here to handle all your social media needs, ensuring your content is strategically managed.</p>
+                <p class="text-block-text--pg3-s2">Our in-house social media manager is here to handle all your social media needs, ensuring your content is strategically managed.</p>
               </div>
 
               <div class="text-block">
@@ -177,12 +215,12 @@
                   <svg height="20" width="20" viewBox="0 0 196.407 196.407" aria-hidden="true">
                     <path d="M56.084,189.137c-1.735,0.897-3.807,1.012-5.891-1.071L2.651,139.517 c-4.204-4.291-3.225-9.943,1.648-13.462c6.228-4.498,14.555-11.83,21.582-22.55c3.291-5.026,7.995-5.363,11.248-0.315 l11.727,18.205c3.258,5.053,7.006,11.389,9.018,10.677c0.816-0.288,1.806-0.995,2.986-2.393L156.169,9.877 c3.742-4.699,9.023-4.194,11.803,1.131l27.054,51.894c2.779,5.325,1.235,12.695-3.448,16.459L69.1,177.786 C64.422,181.55,59.272,187.5,56.084,189.137z"></path>
                   </svg>
-                  <h3 class="cmp-text-heading">Customer Support</h3>
+                  <h3 class="cmp-text-heading cmp-text-heading--pg3-s2">Customer Support</h3>
                 </div>
-                <p>We are always here when you need us. You will have direct access to me, the lead developer and owner, whenever you need to reach out.</p>
+                <p class="text-block-text--pg3-s2">We are always here when you need us. You will have direct access to me, the lead developer and owner, whenever you need to reach out.</p>
               </div>
 
-              <a class="cmp-main-btn cmp-main-btn--pg1-s2" href="#">CONTACT US</a>
+              <a class="cmp-main-btn cmp-main-btn--pg1-s2 cmp-main-btn--light" href="#">CONTACT US</a>
             </div>
 
 
@@ -362,6 +400,10 @@
           </div>
 
           <div class="footer-bottom-links-container">
+            <svg class="created-by-svg" viewBox="0 0 260 24" aria-label="Created by Algarve WebCraft">
+              <text x="16" y="18" font-family="Arial, sans-serif" font-size="16" fill="white" font-style="italic">Developed by Algarve WebCraft</text>
+            </svg>
+
             <div>
               <span id="year"></span>
               <span><strong>Algarve WebCraft</strong></span>
