--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
-    <link rel="preload" href="/css/critical.css" as="style">
-    <link rel="stylesheet" href="/css/critical.css">
-    <link rel="preload" href="/css/style.css" as="style">
-    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/glide.css" as="style">
-    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="/css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="/css/dark-mode.css">
-    <script type="module" src="/js/glide.min.js" defer></script>
-    <script type="module" src="/js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
+    <link rel="preload" href="css/critical.css" as="style">
+    <link rel="stylesheet" href="css/critical.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/glide.css" as="style">
+    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <script type="module" src="js/glide.min.js" defer></script>
+    <script type="module" src="js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="/css/style.css">
-      <link rel="stylesheet" href="/css/glide.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -143,8 +143,8 @@
           <div class="cards-main-text-container">
             <span class="cmp-topper-heading">Our Mission</span>
             <h2 class="cmp-sub-heading sub-heading--pg1-s1">Have a website your small business can be proud of</h2>
-            <p class="cmp-main-text main-text--pg1-s1">We build high-performance websites for small businesses across Europe. Every site is hand-coded from the ground up for speed, SEO, and long-term success — giving your business the edge it needs to attract more customers and generate more revenue. We handle all edits and updates for you, so you are never left stuck or unsupported. Our focus is on building long-term relationships, supporting your growth every step of the way.</p>
-          </div>
+            <p class="cmp-main-text main-text--pg1-s1">We build high-performance websites for small businesses across Europe. Every site is hand-coded from the ground up for speed, SEO, and long-term success — giving your business the edge it needs to attract more customers and generate more revenue. We handle all edits and updates for you, so you are never left stuck or unsupported. Our focus is on building long-term relationships with our clients, supporting your growth every step of the way.</p>
+          </div> 
 
           <ul class="services-card-container" role="list">
             <li class="services-card">
@@ -255,7 +255,7 @@
             <div class="text-block-container">
               <div class="text-block-container__main-text">
                 <span class="cmp-topper-heading">Our approach</span>
-                <h2 class="cmp-sub-heading">Websites Start At €0 Upfront And €85 Per Month</h2>
+                <h2 class="cmp-sub-heading">Professional Web Design for Just €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2> 
                 <p class="cmp-main-text cmp-main-text--pg1-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more than the basics? We will give you a fair, custom quote based on your exact needs.</p>
                 <p class="cmp-main-text cmp-main-text--pg1-s2">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
               </div>
@@ -481,7 +481,7 @@
                 </li>
               </ul>
 
-              <span>€1100</span>
+              <span>€1200</span>
               <span>+€15/mo Hosting</span>
               <a class="cmp-main-btn" href="#">Get Started</a>
             </div>
@@ -641,6 +641,10 @@
           </div>
 
           <div class="footer-bottom-links-container">
+            <svg class="created-by-svg" viewBox="0 0 260 24" aria-label="Created by Algarve WebCraft">
+              <text x="16" y="18" font-family="Arial, sans-serif" font-size="16" fill="white" font-style="italic">Developed by Algarve WebCraft</text>
+            </svg>
+
             <div>
               <span id="year"></span>
               <span><strong>Algarve WebCraft</strong></span>
